2014/06/19 JAVA1.5への対応修正
git-svn-id: http://10.16.14.243:13000/svn/azbIvr@59 cade1dd4-7bb4-cb43-9a97-402565d5d6a2